# riot-generator

./: .gitignore  COPYING  MANIFEST  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: continuous-integration.yml  test.yml
riotgen/: __init__.py  application.py  board.py  common.py  driver.py  example.py  generator.py  helpers.py  main.py  module.py  pkg.py  test.py  utils.py
riotgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
riotgen/data/licenses/: AGPL3.txt  Apache2.txt  BSD.txt  LGPL21.txt  MIT.txt  MPL2.txt
riotgen/samples/: sample-application.cfg  sample-board.cfg  sample-config.cfg  sample-driver.cfg  sample-example.cfg  sample-module.cfg  sample-pkg.cfg  sample-test.cfg
riotgen/templates/application/: 01-run.py.j2  Makefile  Makefile.j2  README.md  README.md.j2  main.c  main.c.j2
riotgen/templates/board/: Kconfig.j2  Makefile.features  Makefile.features.j2  Makefile.include  board.c  board.c.j2  board.h  board.h.j2  doc.md.j2  doc.txt  doc.txt.j2  periph_conf.h  periph_conf.h.j2
riotgen/templates/common/: header-headerfile.j2  header.j2
riotgen/templates/driver/: Kconfig.j2  Makefile.dep.j2  Makefile.include.j2  driver.c.j2  driver.h.j2  driver_constants.h.j2  driver_netdev.c.j2  driver_netdev.h.j2  driver_params.h.j2
riotgen/templates/example/: Makefile  Makefile.j2  README.md  README.md.j2  main.c  main.c.j2
riotgen/templates/module/: module.c.j2  module.h.j2
riotgen/templates/pkg/: Kconfig.j2  Makefile  Makefile.dep  Makefile.dep.j2  Makefile.include  Makefile.include.j2  Makefile.j2  Makefile.pkg  doc.md.j2  doc.txt  doc.txt.j2  pkg.mk.j2
riotgen/templates/test/: 01-run.py  01-run.py.j2  Makefile  Makefile.j2  README.md  README.md.j2  main.c  main.c.j2
riotgen/tests/: test_common.py  test_main.py  test_utils.py
riotgen/tests/test_data/: .gitignore  application.cfg  application_config  board.cfg  driver.yml  driver_netdev.yml  example.yml  expected  module.yml  pkg.cfg  template.j2  test.yml
riotgen/tests/test_data/application/: Makefile  main.c
riotgen/tests/test_data/board/: Kconfig  Makefile.features  board.c  board.h  doc.md  doc.txt  periph_conf.h
riotgen/tests/test_data/driver/: Kconfig  driver.c  driver.h  driver_constants.h  driver_params.h
riotgen/tests/test_data/driver_netdev/: Makefile.dep  Makefile.include  driver.c  driver.h  driver_constants.h  driver_netdev.c  driver_netdev.h  driver_params.h
riotgen/tests/test_data/example/: main.c
riotgen/tests/test_data/module/: module.c  module.h
riotgen/tests/test_data/pkg/: Kconfig  Makefile  Makefile.dep  Makefile.include  doc.md  doc.txt  test.mk
riotgen/tests/test_data/test/: 01-run.py  Makefile  README.md  main.c
riotgen/tests/test_data/test_template/: template.j2
